Add hero section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,93 @@
     <title>Exam-bs</title>
 </head>
 <body>
+  <!-- ===== HERO START ===== -->
+  <header class="site-header ">
+    <div class="d-container">
+      <div class="header-top d-none d-md-block">
+        <ul class="list-unstyled mb-0 d-flex justify-content-end">
+          <li class="header-top-item d-flex align-items-center">
+            <address class="mb-0">
+              <a class="text-decoration-none header-top-link" href="#">Company Address type here</a>
+            </address>
+          </li>
+          <li class="header-top-item d-flex align-items-center">
+            <a class="text-decoration-none header-top-link" href="tel:+998940000000">+94 000 00000</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+      <div class="header-bottom position-relative">
+        <div class="d-container">
+          <div class="d-flex align-items-center">
+            <a class="logo me-auto" href="./index.html">
+                <img class="logo-img" src="./images/logo.svg" alt="Digital agency's logo">
+            </a>
+            <button class="burger-btn d-md-none" type="button"></button>
+            <nav class="sitenav text-center ">
+                <ul class="list-unstyled mb-0 d-md-flex">
+                  <li class="sitenav-item mb-3 mb-md-0 d-md-flex align-items-center">
+                    <a class="sitenav-link text-decoration-none" href="#">Home</a>
+                  </li>
+                  <li class="sitenav-item mb-3 mb-md-0">
+                    <a class="sitenav-link text-decoration-none" href="#">About us</a>
+                  </li>
+                  <li class="sitenav-item mb-3 mb-md-0">
+                    <a class="sitenav-link text-decoration-none" href="#">Services</a>
+                  </li>
+                  <li class="sitenav-item">
+                    <a class="sitenav-link text-decoration-none" href="#">News</a>
+                  </li>
+                </ul>
+            </nav>
+            <button class="contact-us-btn d-none d-md-block">Contact us</button>
+          </div>
+        </div>
+      </div>
+  </header>
+
+  <main class="site-main">
+    
+    <!-- ===== HERO START ===== -->
+    <section class="hero">
+       <div class="d-container">
+           <div class="hero-text-wrap">
+             <strong class="hero-digital-text fw-bold">Digital Marketing</strong>
+             <div class="title-wrap">
+              <h1 class="hero-title fw-bold">Work that we produce for our clients</h1>
+             </div>
+             <p class="hero-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+             <a class="hero-link text-decoration-none" href="#">Get more details</a> 
+            </div>
+       </div>
+    </section>
+
+    <!-- ===== FEATURES START ===== -->
+    <!-- <section class="features">
+       <div class="d-container">
+           <div class="">
+              <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+           </div>
+       </div>
+    </section> -->
   
+    <!-- ===== CAROUSEL START ===== -->
+    <section class="">
+       <div class="d-container">
+           <div class="carousel-wrap">
+             <h1>Lorem Ipsum</h1>
+             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+             <div class="carousel-item-wrap">
+               <div class="carousel-item"></div>
+               <div class="carousel-item"></div>
+               <div class="carousel-item"></div>
+               <div class="carousel-item"></div>
+               <div class="carousel-item"></div>
+             </div>                 
+           </div>
+       </div>
+    </section>
+  </main>
 
     
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
