--- a/index.html
+++ b/index.html
@@ -72,27 +72,127 @@
     </section>
 
     <!-- ===== FEATURES START ===== -->
-    <!-- <section class="features">
+    <section class="features">
        <div class="d-container">
-           <div class="">
-              <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+           <div class="features-title-wrap">
+              <h2 class="features-title fw-semibold text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
            </div>
+           <div class="features-info-wrap d-none d-md-block">
+            <h3 class="features-subtitle fw-semibold">Lorem Ipsum</h3>
+            <p class="features-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+           </div>
+           <img class="features-img img-fluid ms-md-0" src="./images/features-img.png" alt="">
        </div>
-    </section> -->
+    </section>
+
+    <!-- ===== PRODUCT START ===== -->
+    <section class="product">
+       <div class="d-container">
+           <div class="features-title-wrap product-text-wrap text-center">
+             <h2 class="features-title fw-semibold product-title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+             <p class="product-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+           </div>
+           <ul class="row list-unstyled d-flex flex-wrap justify-content-center">
+            <li class="col-12 col-sm-6 col-lg-3 product-item d-flex flex-column align-items-center">
+              <h3 class="product-name fw-medium">Mobile Game Development</h3>
+              <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
+            </li>
+            <li class="col-12 col-sm-6 col-lg-3 product-item d-flex flex-column align-items-center">
+              <h3 class="product-name fw-medium">PC Game Development</h3>
+              <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
+            </li>
+            <li class="col-12 col-sm-6 col-lg-3 product-item d-flex flex-column align-items-center">
+              <h3 class="product-name fw-medium">PS4 Game Development</h3>
+              <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
+            </li>
+            <li class="col-12 col-sm-6 col-lg-3 product-item d-flex flex-column align-items-center">
+              <h3 class="product-name fw-medium">AR/VR Solutions</h3>
+              <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
+            </li>
+            <li class="col-3 d-none d-lg-flex  product-item flex-column align-items-center justify-content-center">
+              <h3 class="product-name fw-medium">AR/ VR design</h3>
+              <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
+            </li>
+            <li class="col-3 d-none d-lg-flex  product-item flex-column align-items-center">
+              <h3 class="product-name fw-medium">3D Modelings</h3>
+              <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
+            </li>
+           </ul>
+       </div>
+    </section>
   
     <!-- ===== CAROUSEL START ===== -->
-    <section class="">
+    <section class="carousel">
        <div class="d-container">
            <div class="carousel-wrap">
-             <h1>Lorem Ipsum</h1>
-             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-             <div class="carousel-item-wrap">
-               <div class="carousel-item"></div>
-               <div class="carousel-item"></div>
-               <div class="carousel-item"></div>
-               <div class="carousel-item"></div>
-               <div class="carousel-item"></div>
-             </div>                 
+             <div class="carousel-title-wrap">
+              <h2 class="carousel-title fw-semibold">Lorem Ipsum</h2>
+              <p class="carousel-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+             </div>      
+           </div>
+       </div>
+       <ul class="carousel-item-wrap list-unstyled mx-auto d-flex justify-content-center">
+          <li class="carousel-item-custom">
+            <button class="carousel-item-btn">Lorem ipsum</button>
+            <h2 class="carousel-item-title fw-semibold">Lorem Ipsum</h2>
+            <p class="carousel-item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+            <a class="carousel-link text-decoration-none d-flex align-items-center justify-content-end"  href="#">Read more</a>
+          </li>
+          <li class="carousel-item-custom">
+            <button class="carousel-item-btn red">Lorem ipsum</button>
+            <h2 class="carousel-item-title fw-semibold">Lorem Ipsum</h2>
+            <p class="carousel-item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+            <a class="carousel-link text-decoration-none d-flex align-items-center justify-content-end"  href="#">Read more</a>
+          </li>
+          <li class="carousel-item-custom">
+            <button class="carousel-item-btn purple">Lorem ipsum</button>
+            <h2 class="carousel-item-title fw-semibold">Lorem Ipsum</h2>
+            <p class="carousel-item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+            <a class="carousel-link text-decoration-none d-flex align-items-center justify-content-end"  href="#">Read more</a>
+          </li>
+          <li class="carousel-item-custom">
+            <button class="carousel-item-btn blue">Lorem ipsum</button>
+            <h2 class="carousel-item-title fw-semibold">Lorem Ipsum</h2>
+            <p class="carousel-item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+            <a class="carousel-link text-decoration-none d-flex align-items-center justify-content-end"  href="#">Read more</a>
+          </li>
+          <li class="carousel-item-custom ">
+            <button class="carousel-item-btn red">Lorem ipsum</button>
+            <h2 class="carousel-item-title fw-semibold">Lorem Ipsum</h2>
+            <p class="carousel-item-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+            <a class="carousel-link text-decoration-none d-flex align-items-center justify-content-end"  href="#">Read more</a>
+          </li>
+      </ul>           
+    </section>
+
+    <!-- ===== PROJECTS START ===== -->
+    <section class="projects">
+       <div class="container">
+           <div class="projects-title-wrap mx-auto text-center">
+             <h2 class="projects-title fw-semibold">Our Recent Projects</h2>
+             <p class="projects-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+           </div>
+           <div class="row">
+             <div class="col-12 projects-item">
+               <img class="img-fluid" src="./images/books.jpg"
+                    srcset="./images/books.jpg 1x, ./images/books@2x.jpg 2x"
+                    alt="Books and copybooks on the table">
+             </div>
+             <div class="col-12 projects-item">
+                <img class="img-fluid" src="./images/meeting.jpg"
+                     srcset="./images/meeting.jpg 1x, ./images/meeting@2x.jpg 2x"
+                     alt="People are participating in the meeting">
+             </div>
+             <div class="col-12 projects-item">
+                <img class="img-fluid projects-img" src="./images/developer-girls.jpg"
+                     srcset="./images/developer-girls.jpg 1x, ./images/developer-girls@2x.jpg 2x"
+                     alt="Two girls conversation">
+             </div>
+             <div class="col-12 projects-item">
+                <img class="img-fluid" src="./images/work-girl.jpg"
+                     srcset="./images/work-girl.jpg 1x, ./images/work-girl@2x.jpg 2x"
+                     alt="Two girls conversation">
+             </div>
            </div>
        </div>
     </section>
