--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="list-unstyled mb-0 d-flex justify-content-end">
           <li class="header-top-item d-flex align-items-center">
             <address class="mb-0">
-              <a class="text-decoration-none header-top-link" href="#">Company Address type here</a>
+              <a class="text-decoration-none header-top-link" href="#" target="_blank">Company Address type here</a>
             </address>
           </li>
           <li class="header-top-item d-flex align-items-center">
@@ -33,7 +33,7 @@
                 <img class="logo-img" src="./images/logo.svg" alt="Digital agency's logo">
             </a>
             <button class="burger-btn d-md-none" type="button"></button>
-            <nav class="sitenav text-center ">
+            <nav class="sitenav text-center">
                 <ul class="list-unstyled mb-0 d-md-flex">
                   <li class="sitenav-item mb-3 mb-md-0 d-md-flex align-items-center">
                     <a class="sitenav-link text-decoration-none" href="#">Home</a>
@@ -49,7 +49,7 @@
                   </li>
                 </ul>
             </nav>
-            <button class="contact-us-btn d-none d-md-block">Contact us</button>
+            <button class="contact-us-btn d-none d-md-block fw-normal">Contact us</button>
           </div>
         </div>
       </div>
@@ -74,50 +74,54 @@
     <!-- ===== FEATURES START ===== -->
     <section class="features">
        <div class="d-container">
-           <div class="features-title-wrap">
-              <h2 class="features-title fw-semibold text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+           <div class="features-wrap">
+            <div class="features-title-wrap">
+               <h2 class="features-title fw-semibold text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+            </div>
+            <div class="features-info-wrap d-none d-md-block">
+             <h3 class="features-subtitle fw-semibold">Lorem Ipsum</h3>
+             <p class="features-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+            </div>
+            <img class="features-img img-fluid ms-md-0" src="./images/features-img.png" alt="Some people are working">
            </div>
-           <div class="features-info-wrap d-none d-md-block">
-            <h3 class="features-subtitle fw-semibold">Lorem Ipsum</h3>
-            <p class="features-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
-           </div>
-           <img class="features-img img-fluid ms-md-0" src="./images/features-img.png" alt="">
        </div>
     </section>
 
     <!-- ===== PRODUCT START ===== -->
     <section class="product">
        <div class="d-container">
-           <div class="features-title-wrap product-text-wrap text-center">
-             <h2 class="features-title fw-semibold product-title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
-             <p class="product-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+           <div class="product-wrap">
+            <div class="features-title-wrap product-text-wrap text-center">
+              <h2 class="features-title fw-semibold product-title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+              <p class="product-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+            </div>
+            <ul class="row list-unstyled d-flex flex-wrap justify-content-center">
+             <li class="col-12 col-sm-6 col-lg-3 product-item d-flex flex-column align-items-center">
+               <h3 class="product-name fw-medium">Mobile Game Development</h3>
+               <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
+             </li>
+             <li class="col-12 col-sm-6 col-lg-3 product-item d-flex flex-column align-items-center">
+               <h3 class="product-name fw-medium">PC Game Development</h3>
+               <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
+             </li>
+             <li class="col-12 col-sm-6 col-lg-3 product-item d-flex flex-column align-items-center">
+               <h3 class="product-name fw-medium">PS4 Game Development</h3>
+               <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
+             </li>
+             <li class="col-12 col-sm-6 col-lg-3 product-item d-flex flex-column align-items-center">
+               <h3 class="product-name fw-medium">AR/VR Solutions</h3>
+               <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
+             </li>
+             <li class="col-3 d-none d-lg-flex  product-item flex-column align-items-center justify-content-center">
+               <h3 class="product-name fw-medium">AR/ VR design</h3>
+               <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
+             </li>
+             <li class="col-3 d-none d-lg-flex  product-item flex-column align-items-center">
+               <h3 class="product-name fw-medium">3D Modelings</h3>
+               <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
+             </li>
+            </ul>
            </div>
-           <ul class="row list-unstyled d-flex flex-wrap justify-content-center">
-            <li class="col-12 col-sm-6 col-lg-3 product-item d-flex flex-column align-items-center">
-              <h3 class="product-name fw-medium">Mobile Game Development</h3>
-              <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
-            </li>
-            <li class="col-12 col-sm-6 col-lg-3 product-item d-flex flex-column align-items-center">
-              <h3 class="product-name fw-medium">PC Game Development</h3>
-              <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
-            </li>
-            <li class="col-12 col-sm-6 col-lg-3 product-item d-flex flex-column align-items-center">
-              <h3 class="product-name fw-medium">PS4 Game Development</h3>
-              <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
-            </li>
-            <li class="col-12 col-sm-6 col-lg-3 product-item d-flex flex-column align-items-center">
-              <h3 class="product-name fw-medium">AR/VR Solutions</h3>
-              <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
-            </li>
-            <li class="col-3 d-none d-lg-flex  product-item flex-column align-items-center justify-content-center">
-              <h3 class="product-name fw-medium">AR/ VR design</h3>
-              <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
-            </li>
-            <li class="col-3 d-none d-lg-flex  product-item flex-column align-items-center">
-              <h3 class="product-name fw-medium">3D Modelings</h3>
-              <a href="#"><img src="./images/right-arrow.svg" alt="Right arrow img"></a>
-            </li>
-           </ul>
        </div>
     </section>
   
@@ -168,41 +172,43 @@
     <!-- ===== PROJECTS START ===== -->
     <section class="projects">
        <div class="d-container">
-           <div class="projects-title-wrap mx-auto text-center">
-             <h2 class="projects-title fw-semibold">Our Recent Projects</h2>
-             <p class="projects-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-           </div>
-           <div class="row">
-             <div class="col-12 projects-item d-flex justify-content-center col-md-6 col-lg-4">
-               <img class="img-fluid" src="./images/books.jpg"
-                    srcset="./images/books.jpg 1x, ./images/books@2x.jpg 2x"
-                    alt="Books and copybooks on the table">
-             </div>
-             <div class="col-12 projects-item d-flex justify-content-center col-md-6 col-lg-4">
-                <img class="img-fluid" src="./images/meeting.jpg"
-                     srcset="./images/meeting.jpg 1x, ./images/meeting@2x.jpg 2x"
-                     alt="People are participating in the meeting">
-             </div>
-             <div class="col-12 projects-item d-flex justify-content-center col-md-6 col-lg-4">
-                <img class="projects-img" src="./images/work-girl.jpg"
-                     srcset="./images/work-girl.jpg 1x, ./images/work-girl@2x.jpg 2x"
-                     alt="A girl hard work">
-             </div>
-             <div class="d-none justify-content-center d-lg-flex col-3">
-                <img class="projects-img" src="./images/developer-girl.jpg"
-                     srcset="./images/developer-girl.jpg 1x, ./images/developer-girl@2x.jpg 2x"
-                     alt="A girl hard work">
-             </div>
-             <div class="col-12 projects-item d-none justify-content-center d-lg-flex col-lg-4">
-                <img class="projects-img" src="./images/conversation.jpg"
-                     srcset="./images/conversation.jpg 1x, ./images/conversation@2x.jpg 2x"
-                     alt="Some people are talking">
-             </div>
-             <div class="col-12 projects-item d-flex justify-content-center col-md-6 col-lg-5">
-              <img class="projects-img" src="./images/developer-girls.jpg"
-                   srcset="./images/developer-girls.jpg 1x, ./images/developer-girls@2x.jpg 2x"
-                   alt="Two girls are talking">
-           </div>
+           <div class="projects-wrap">
+            <div class="projects-title-wrap mx-auto text-center">
+              <h2 class="projects-title fw-semibold">Our Recent Projects</h2>
+              <p class="projects-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            </div>
+            <div class="row">
+              <div class="col-12 projects-item d-flex justify-content-center col-md-6 col-lg-4">
+                <img class="img-fluid" src="./images/books.jpg"
+                     srcset="./images/books.jpg 1x, ./images/books@2x.jpg 2x"
+                     alt="Books and copybooks on the table">
+              </div>
+              <div class="col-12 projects-item d-flex justify-content-center col-md-6 col-lg-4">
+                 <img class="img-fluid" src="./images/meeting.jpg"
+                      srcset="./images/meeting.jpg 1x, ./images/meeting@2x.jpg 2x"
+                      alt="People are participating in the meeting">
+              </div>
+              <div class="col-12 projects-item d-flex justify-content-center col-md-6 col-lg-4">
+                 <img class="projects-img" src="./images/work-girl.jpg"
+                      srcset="./images/work-girl.jpg 1x, ./images/work-girl@2x.jpg 2x"
+                      alt="A girl hard work">
+              </div>
+              <div class="d-none justify-content-center d-lg-flex col-3">
+                 <img class="projects-img" src="./images/developer-girl.jpg"
+                      srcset="./images/developer-girl.jpg 1x, ./images/developer-girl@2x.jpg 2x"
+                      alt="A girl hard work">
+              </div>
+              <div class="col-12 projects-item d-none justify-content-center d-lg-flex col-lg-4">
+                 <img class="projects-img" src="./images/conversation.jpg"
+                      srcset="./images/conversation.jpg 1x, ./images/conversation@2x.jpg 2x"
+                      alt="Some people are talking">
+              </div>
+              <div class="col-12 projects-item d-flex justify-content-center col-md-6 col-lg-5">
+               <img class="projects-img" src="./images/developer-girls.jpg"
+                    srcset="./images/developer-girls.jpg 1x, ./images/developer-girls@2x.jpg 2x"
+                    alt="Two girls are talking">
+            </div>
+            </div>
            </div>
        </div>
     </section>
@@ -210,18 +216,20 @@
     <!-- ===== ABOUT START ===== -->
     <section class="about">
        <div class="d-container">
-           <div class="row d-flex flex-md-row-reverse">
-              <div class="col-12 col-md-6 about-info-wrap">
-                <h2 class="about-title fw-medium">Lorem Ipsum is simply dummy text dummy text </h2>
-                <p class="about-text about-text-start">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
-                <p class="about-text about-text-end">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                <a class="about-link text-decoration-none text-white d-inline-block" href="#">Read more</a>
-              </div>
-              <div class="col-12 col-md-6">
-                <img class="img-fluid" src="./images/about-img.jpg" 
-                     srcset="./images/about-img.jpg 1x, ./images/about-img@2x.jpg 2x"
-                     alt="Three people are shaking hands">
-              </div>
+           <div class="about-wrap">
+            <div class="row d-flex flex-md-row-reverse justify-content-between">
+               <div class="col-12 col-md-6 about-info-wrap">
+                 <h2 class="about-title fw-medium">Lorem Ipsum is simply dummy text dummy text </h2>
+                 <p class="about-text about-text-start">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
+                 <p class="about-text about-text-end">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                 <a class="about-link text-decoration-none text-white d-inline-block" href="#">Read more</a>
+               </div>
+               <div class="col-12 col-md-6 ">
+                 <img class="img-fluid" src="./images/about-img.jpg" 
+                      srcset="./images/about-img.jpg 1x, ./images/about-img@2x.jpg 2x"
+                      alt="Three people are shaking hands">
+               </div>
+            </div>
            </div>
        </div>
     </section>
@@ -229,23 +237,25 @@
     <!-- ===== ARTICLE START ===== -->
     <article class="site-article">
        <div class="d-container">
-           <div class="article-title-wrap">
-             <h2 class="article-title fw-semibold">Lorem Ipsum</h2>
-             <p class="article-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-           </div>
-           <div class="row form-wrap d-flex align-items-center">
-             <div class="col-12 form-text-wrap col-md-6 px-0 px-md-2">
-               <h3 class="text-white form-title">Stay in the loop</h3>
-               <p class="text-white mb-0 form-info">Subscribe to receive the latest news and updates about TDA.We promise not to spam you! </p>
-             </div>
-             <div class="col-12 col-md-6">
-               <form class="w-auto" action="https://echo.htmlacademy.ru/" method="post" autocomplete="off">
-                 <label class="form-label mb-0">
-                    <input class="form-input" type="email" name="user_email" minlength="5" maxlength="1024" placeholder="Enter email address" required>
-                    <button class="form-btn" type="submit">Continue</button>
-                  </label>
-               </form>
-             </div>
+           <div class="article-wrap">
+            <div class="article-title-wrap">
+              <h2 class="article-title fw-semibold">Lorem Ipsum</h2>
+              <p class="article-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            </div>
+            <div class="row form-wrap d-flex align-items-center">
+              <div class="col-12 form-text-wrap col-md-6 px-0 px-md-2">
+                <h3 class="text-white form-title">Stay in the loop</h3>
+                <p class="text-white mb-0 form-info">Subscribe to receive the latest news and updates about TDA.We promise not to spam you! </p>
+              </div>
+              <div class="col-12 col-md-6">
+                <form class="w-auto" action="https://echo.htmlacademy.ru/" method="post" autocomplete="off">
+                  <div class="input-wrap">
+                     <input class="form-input" type="email" name="user_email" aria-label="Enter your email address" minlength="5" maxlength="1024" placeholder="Enter email address" required>
+                     <button class="form-btn" type="submit">Continue</button>
+                   </div>
+                </form>
+              </div>
+            </div>
            </div>
        </div>
     </article>
@@ -257,7 +267,7 @@
       <div class="footer-inner d-none text-white d-md-flex flex-column flex-xl-row justify-content-between ">
         <div class="d-flex justify-content-between w-100 w-xl-50 mx-auto mx-xl-0">
           <div class="logo-group">
-            <a class="logo" href="#">
+            <a class="logo" href="./index.html">
               <img class="logo-img" src="./images/logo.svg" alt="site-logo">
             </a>
             <p class="logo-group-title">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
@@ -323,12 +333,12 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p class="footer-text text-white text-center">Copyright ® 2021 Company All rights Rcerved</p>
+      <p class="footer-text text-white text-center mb-0">Copyright ® 2021 Company All rights Rcerved</p>
     </div>
   </footer>
 
     
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="./bs-js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
